# mtg-ml

./: LICENSE  README.md  pyproject.toml
docker/: Dockerfile
misc/: word2vec.ipynb
pyspark-docker-test/: docker-compose.yml
supervised/: linear_regression.ipynb
supervised/regression/: linear_regression.ipynb
unsupervised/gan/: README.md  download_images.ipynb  gan.ipynb  gan.py
